# salary-graph

./: .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  WORKSPACE  elm.json  package.yaml  stack-snapshot.yaml  stack.yaml
.github/workflows/: build.yaml
app/: Main.hs
app/generate/: Main.hs
elm-src/: Main.elm
elm-src/List/: Ext.elm
elm-src/Model/: Monthly.elm  Range.elm
src/SalaryGraph/: API.hs  Cmd.hs  DB.hs  Salary.hs
static/: index.html
