package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_binary",
)

load(
    "//:build/common.bzl",
    "GHC_FLAGS",
)

load(
    "//build/rules/haskell:def.bzl",
    "paths_module",
)

haskell_library(
    name = "salary-graph-library",
    src_strip_prefix = "src",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        "@stackage//:aeson",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:containers",
        "@stackage//:directory",
        "@stackage//:elm-bridge",
        "@stackage//:file-embed",
        "@stackage//:http-media",
        "@stackage//:servant-elm",
        "@stackage//:servant-server",
        "@stackage//:stm",
    ],
    extra_srcs = ["static/index.html"],
    compiler_flags = GHC_FLAGS,
)

paths_module(
    name = "paths_module",
    package = "salary-graph",
    version = "1.0.0",
)

haskell_binary(
    name = "salary-graph",
    srcs = glob(["app/**/*.hs"]),
    deps = [
        ":salary-graph-library",
        ":paths_module",
        "@stackage//:base",
        "@stackage//:servant-server",
        "@stackage//:warp",
    ],
    compiler_flags = GHC_FLAGS,
)
